Fix bug wrong url
Fix bug wrong url

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_LOCATION="https://golive-chat.sgame.us/"
+REACT_APP_API_URL="https://golive-chat.sgame.us/"
 REACT_APP_LOCATION="https://golive-chat.sgame.us/"
