--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4000 react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "start:dev": "cp .env.dev .env && npm start",
     "start:stg": "cp .env.stg .env && npm start",
